syntax = "proto3";
import "select_enums.proto";

package gRPC.Selector;

message SelectConditionPack {
    bool not = 1; // Flag should be used logic negation
    repeated SelectCondition select_conditions = 2;
    repeated SelectConditionPack select_condition_packs = 3;
    Enum.LogicCondition join_condition = 4; // Logic condition, default value 0 = And
}

message SelectLines {
    uint32 from = 1; // Row number, begin from 1; 0 - not setted
    uint32 till = 2; // Row number, begin from 1; 0 - not setted
}

message SelectRequest {
    oneof root_select_condition {
        SelectCondition where_simple = 1;
        SelectConditionPack where = 2;
    }
    SelectLines lines = 3;
}

message SelectCondition {
    string property_name = 1; // Property name, set empty to compare with parameter
    Enum.Converter converter = 2; // Value converter, default value 0 = no converter
    Enum.CompareCondition condition = 3; // Compare condition, default value 0 = equal
    string value = 4;
}
